scrollbar css, mongoDB implementation fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,33 @@ body, html {
     width:100%;
 }
 
+.nameholder::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #252729;
+}
+
+.chatbox::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #3f4649;
+}
+
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #252729;
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: rgb(24, 21, 21);
+}
+
 
 /* server login menu */
 #server_browser {
@@ -42,8 +69,16 @@ body, html {
     background-color:lightgrey;
     font-size: 2rem;
     color:black;
+    border-style: groove;
+    border-bottom: hidden;
+    opacity: 0.7;
+    transition: 0.2s;
 }
+.server_list:hover {opacity: 1;}
 
+.server_list span {
+    padding-left: 5%;
+}
 #chat_content {
     display:none;
 }
@@ -240,6 +275,11 @@ body, html {
     background-color: #181a1b;
 }
 
+.nameholder {
+    width:100%;
+    height:75%;
+}
+
 .userlist span b {
     position:relative;
     font-size: 1.5vw;
@@ -258,13 +298,12 @@ body, html {
 .name {
     position:relative;
     font-size: 1vw;
-    top:30%;
     color:white;
     text-align: center;
 }
 
 .numUsers {
-    position: relative;
+    position: absolute;
     top:90%;
     color:white;
     font-size: 1vw;
